@@ -2,9 +2,21 @@
 
 Simple Banking System Using JavaFx for Course "CSE 204" of "University of Asia Pacific"
 
-## Getting Started
+## Instructions
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+    1. Create a new JavaFx project in Eclipse
+    2. Copy everything in src folder to the src folder of your project.
+    3. Add Javafx Dependencies
+    4. Add External Jar to classpath (src/resources/BankingLibrary.jar)
+    5. Edit run configurations. Add VM arguments: --module-path "JAVAFX_PATH" --add-modules javafx.controls,javafx.fxml
+    6. Run src/application/Main.java
+    7. Edit anything and re-run the Main.java
+
+## Instructions
+
+Click the image below to view project setup instructions in youtube.
+
+[![Will Be Added soon]()](https://youtu.be/VIDEO_ID)
 
 ## Folder Structure
 
@@ -18,24 +30,39 @@ Meanwhile, the compiled output files will be generated in the `bin` folder by de
 
 > If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
 
-## Screenshots
-
-    ![ScreenShot 1](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_01.png?raw=true)
-
-    ![ScreenShot 2](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_02.png?raw=true)
-
-    ![ScreenShot 3](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_03.png?raw=true)
-
-    ![ScreenShot 4](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_04.png?raw=true)
-
-    ![ScreenShot 5](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_05.png?raw=true)
-
-    ![ScreenShot 6](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_06.png?raw=true)
-
-    ![ScreenShot 7](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_07.png?raw=true)
-
-    ![ScreenShot 8](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_08.png?raw=true)
-
 ## Dependency Management
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+    1. JavFx Library Jar Files
+    2. External Jar Files (src/resources/BankingLibrary.jar)
+    3. JavaFx Library (javafx.controls, javafx.fxml)
+
+## Softwares Used
+
+    1. Eclipse IDE
+    2. JavaFx Scenebuilder
+
+## Video Demo
+
+Click to watch the video on youtube.
+
+[![](https://img.youtube.com/vi/ifUS0OTIjRw/maxresdefault.jpg)](https://youtu.be/ifUS0OTIjRw)
+
+## Screenshots
+
+![ScreenShot 1](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_01.png?raw=true)
+
+![ScreenShot 2](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_02.png?raw=true)
+
+![ScreenShot 3](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_03.png?raw=true)
+
+![ScreenShot 4](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_04.png?raw=true)
+
+![ScreenShot 5](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_05.png?raw=true)
+
+![ScreenShot 6](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_06.png?raw=true)
+
+![ScreenShot 7](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_07.png?raw=true)
+
+![ScreenShot 8](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/Screenshot_08.png?raw=true)
+
+![GIF 1](https://raw.githubusercontent.com/fardeenes7/BankingSystemJavaFX/main/screenshots/GIF_01.gif?raw=true)
